Added GA code & modified celebrate.html page

--- a/src/app/mother/celebrate.html
+++ b/src/app/mother/celebrate.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="">Dear, <span class="motherly">{{ celebrate.motherName }}...</span></h1>
+    <h1><span class="motherly">Dear {{ celebrate.motherName }}...</span></h1>
     <div class="awesome-list-container">
         <p class="center awesome-list">Thank you for being the awesome person that you are.</p>
         <p class="center awesome-list">Thank you for being a caring, loving, individual.</p>
